Fix x-axis overflow of the img

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ body {
     right: 0;
     top: 200px;
     bottom: 0;
+    overflow-x: hidden;
     overflow-y: hidden;
 }
 
